# exptr_api/docs/swagger.yaml
@@ -2,7 +2,11 @@ basePath: /api/v1
 definitions:
   models.Category:
     properties:
+      color:
+        type: string
       created_at:
+        type: string
+      icon:
         type: string
       id:
         type: string
@@ -17,7 +21,11 @@ definitions:
     type: object
   models.CategoryRequest:
     properties:
+      color:
+        type: string
       created_at:
+        type: string
+      icon:
         type: string
       name:
         type: string
